--- a/test.html
+++ b/test.html
@@ -62,6 +62,8 @@ This a table </br>
 
 </table>
 
+<p> This is to test git </p>
+
 <a href="formsample.html" target="_blank">
 <h2> Forms </h2> </a> </br>
 
